--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -25,8 +25,8 @@ jobs:
           # This token is required only if you have configured to store the signatures in a remote repository/organization
           # PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
-          path-to-signatures: 'signatures/version1/cla.json'
-          path-to-document: 'https://github.com/wled-wiring/wled-wiring.github.io/blob/main/.github/cla.md' # e.g. a CLA or a DCO document
+          path-to-signatures: '.cla/cla.json'
+          path-to-document: 'https://github.com/wled-wiring/wled-wiring.github.io/blob/main/.cla/cla.md' # e.g. a CLA or a DCO document
           # branch should not be protected
           branch: 'main'
           allowlist: user1,bot*
